# voicecraft

./: .gitignore  README.md  innerscribe_prompt.md  pyproject.toml
speech_configs/: full_example.yaml  gemini_detailed_speakers.yaml  gemini_example.yaml  gemini_multi_speaker_example.yaml  gemini_voice_showcase.yaml  generated_config.yaml  pharmacy_consultation.yaml  pharmacy_consultation_2.yaml  pharmacy_consultation_3.yaml  pharmacy_consultation_4.yaml  pharmacy_consultation_5.yaml  pharmacy_consultation_6.yaml  restaurant_conversation.yaml
src/voicecraft/: __main__.py  config_generator.py  filename_generator.py
src/voicecraft/speech_synthesizer/: base.py  factory.py  gemini_synthesizer.py  gemini_voices.py
voicecraft/: __init__.py  cli.py
voicecraft/speech_synthesizer/: __init__.py  openai_synthesizer.py
